Make canvas responsive

--- a/index.html
+++ b/index.html
@@ -38,23 +38,19 @@
           <button id="get-video" type="button" name="button">Load Video</button>
         </section>
 
-        <section id="formation" class="col-xs-6 formation">
+        <section id="formation" class="col-md-6 formation">
           <button id="save-spots" type="button" name="button">Save Spots</button>
-          <canvas id="canvas" width="548" height="348"></canvas>
+          <canvas id="canvas" width="1140" height="696"></canvas>
         </section>
 
-        <section id="video" class="col-xs-6 video">
+        <section id="video" class="col-md-6 video">
           <button id="play-dance" type="button" name="button">Play Video With Spots</button>
           <div id="ytplayer" class="ytplayer"></div>
         </section>
 
         <section id="tools" class="col-xs-12 tools">
-          <section id="saved-images" class="col-xs-7">
-            <button id="save-pdf" type="button" name="button">Save PDF</button>
-            <ol id="formation-images" class="formation-images list-inline"></ol>
-          </section>
 
-          <section class="col-xs-5">
+          <section class="col-md-5">
             <div class="">
               <label for="name">Enter Dancer Name</label>
               <input id="name" name="name" class="name">
@@ -62,6 +58,12 @@
             </div>
             <ul id="dancer-list" class="dancer-list"></ul>
           </section>
+
+          <section id="saved-images" class="col-md-7">
+            <button id="save-pdf" type="button" name="button">Save PDF</button>
+            <ol id="formation-images" class="formation-images list-inline"></ol>
+          </section>
+
         </section>
 
 
