add all classes to index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
     <script src="js/classes/Spot.js" defer></script>
     <script src="js/classes/Formation.js" defer></script>
+    <script src="js/classes/Transition.js" defer></script>
+    <script src="js/classes/Video.js" defer></script>
     <script src="js/classes/FormationTimeline.js" defer></script>
     <script src="js/classes/Graphics.js" defer></script>
+    <script src="js/classes/Loop.js" defer></script>
 
     <script src="js/tools.js" defer></script>
     <script src="js/video.js" defer></script>
