allow user to assign start and end times to formations

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
         <section id="video" class="col-md-6 video">
           <button id="play-dance" type="button" name="button">Play Video With Spots</button>
+          <button id="start-time" type="button" name="start-time">Set Start Time</button>
+          <button id="end-time" type="button" name="end-time">Set End Time</button>
           <div id="ytplayer" class="ytplayer"></div>
         </section>
 
